End of section - 7

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.; Database=DatingApp; Trusted_Connection=True; Integrated Security=SSPI;MultipleActiveResultSets=true;Encrypt=false;Enlist=false"
+  },
+  "TokenKey": "ThisIsGonnaBeAnAwesomeDatingApp"
 }
